--- a/.github/workflows/push_master_ci.yml
+++ b/.github/workflows/push_master_ci.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Login to DockerHub
-        run: echo ${{ secret.YANDEX_CLOUD_OAUTH_TOKEN }} | docker login --username oauth --password-stdin cr.yandex
+        run: echo ${{ secrets.YANDEX_CLOUD_OAUTH_TOKEN }} | docker login --username oauth --password-stdin cr.yandex
       - name: Build the Docker image
-        run: docker build . --file FamilyBudget/Dockerfile --tag ${{ secret.REGISTRY_ID }}/family_budget:master
+        run: docker build . --file FamilyBudget/Dockerfile --tag ${{ secrets.REGISTRY_ID }}/family_budget:master
       - name: Push the Docker image
-        run: docker push ${{ secret.REGISTRY_ID }}/family_budget:master
+        run: docker push ${{ secrets.REGISTRY_ID }}/family_budget:master
